[package]
name = "rustyshark"
version = "0.1.0"
edition = "2021"

[dependencies]
ssh2 = "0.9.5"
indicatif = "0.17"
clap = { version = "4.1", features = ["derive"] }
tokio = { version = "1.29", features = ["full"] }
socks = "0.3.4"
colored = "2.0"
dialoguer = "0.10"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
